2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* README.md:
	replaced the request for a 500 GeV run by a 400 GeV one (keeps
	geometric progression);
	added some description of the latest "scripting" work

	* post-process.sh:
	fixed wrong names when processing Herwig results

	* produce-separation-plots.py:
	fixed a bug wit the output file

2015-06-06  Jesse Thaler  <jthaler@mit.edu>

	* compute-efficiencies.py
	Added correct (?) uncertainties for separation plots

2015-06-06  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	added summary plots

	* separation.plot:              *** ADDED ***
	added a file with plotting settings for the summary plots

	* produce-separation-plots.py:  *** ADDED ***
	* get-separation.sh:            *** ADDED ***
	added a simple script that extract an entry from the separation
	tables produced by compute-efficiencies.py and a Pythin script
	that produces yoda files with information useful for summary plots

	* post-process.sh:
	added Herwig++ dipole-shower hadron-level results to the plots

	* post-process.sh:
	added Herwig w. hadronisation
	added a FORCE_PLOTS option which forces only the plots
	fixed a reordering issue

	* MC_LHQG_EE.plot:
	simplified a few things + set a linear y scale for all plots

2015-06-05  Gregory Soyez  <soyez@fastjet.fr>

	* post-process.sh:
	bugfix: create the rebinned directories if not already present
	included results from the Sherpa runs

	* Sherpa/Run-hgg.dat:            *** ADDED ***
	* Sherpa/Run-zqq.dat:            *** ADDED ***
	* Sherpa/results:                *** ADDED ***
	added cards and results from Sherpa. Njet describes the maximal
	number of additional jets included in the Matrix Elements

	* MC_LHQG_EE.cc:
	added a check that FastJet version is at least 3.1.0

	* README.md:
	updated the desctiption to match the discussion we had on
	Thursday; added a description of the workflow and of the results
	and tools.

	* post-process.sh:               *** ADDED ***