@@ -2,6 +2,56 @@
 XLabel=observable
 YLabel=quality
 LogY=0
+XMax=7
+LegendXPos=0.68
 XCustomMajorTicks=0.0	(0,0)	1.0	(2,0)	2.0	(1,0.5)	3.0	(1,1)	4.0	(1,2)
+# END PLOT
+
+# BEGIN HISTOGRAM /separation/
+ConnectBins=0
+ConnectGaps=0
+ErrorBars=1
+# END HISTOGRAM
+
+# BEGIN PLOT /separation/I
+Title=$I_{1/2}$
+YMin=0
+YMax=0.301
+# END PLOT
+
+# BEGIN PLOT /separation/I2
+Title=$I_{1/2}"$
+YMin=0
+YMax=0.401
+# END PLOT
+
+# BEGIN PLOT /separation/grej20
+Title=$g_{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /separation/grej50
+Title=$g^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /separation/qrej20
+Title=$q^{\rm rej}_{20}$
+YMin=0.85
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /separation/qrej50
+Title=$q^{\rm rej}_{50}$
+YMin=0.75
+YMax=1.01
+# END PLOT
+
+# BEGIN PLOT /separation/srej
+Title=$s^{\rm rej}$
+YMin=0.6
+YMax=0.801
 # END PLOT
 
