@@ -1,5 +1,9 @@
 2015-06-06  Gregory Soyez  <soyez@fastjet.fr>
 
+	* separation.plot:
+	* post-process.sh:
+	worked on plot cosmetics
+
 	* README.md:
 	replaced the request for a 500 GeV run by a 400 GeV one (keeps
 	geometric progression);
